css/style.css
/*
 * Muli is licensed under SIL OFL Version 1.1
 * See /assets/logos/font/Muli/OFL.txt file for full information.
 */
@font-face {
	font-family: Muli;
	font-weight: normal;
	font-style: normal;
	font-display: swap;
	src: url('/assets/logos/font/Muli/Muli-Regular.woff') format('woff');
}

@font-face {
	font-family: Muli;
	font-weight: bold;
	font-style: normal;
	font-display: swap;
	src: url('/assets/logos/font/Muli/Muli-Bold.woff') format('woff');
}

@font-face {
	font-family: Muli;
	font-weight: normal;
	font-style: italic;
	font-display: swap;
	src: url('/assets/logos/font/Muli/Muli-Italic.woff') format('woff');
}

@font-face {
	font-family: Muli;
	font-weight: bold;
	font-style: italic;
	font-display: swap;
	src: url('/assets/logos/font/Muli/Muli-BoldItalic.woff') format('woff');
}

/*
 * From Normalize. See https://github.com/thelounge/thelounge/pull/1217
 * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */
abbr[title] {
  border-bottom: 1px dotted;
  border-bottom: none; /* 1 */
  text-decoration: underline; /* 2 */
  text-decoration: underline dotted; /* 2 */
}

body {
	background: #fff;
	color: #415364;
	font: 15px Muli, sans-serif;
	margin: 0;
	margin-bottom: 100px;
}
a,
a:hover,
a:focus {
	font-weight: bold;
	color: #50a656;
}
h2 {
	font-size: 32px;
	font-weight: normal;
}
p {
	line-height: 1.5;
}
li {
	line-height: 1.5;
	margin: 6px 0;
}
code {
	background: #f5f5f5;
	border-radius: 3px;
	font-size: 0.9em;
	padding: 2px 4px;
}
pre {
	background: #f5f5f5;
	border-radius: 3px;
	font-size: 1em;
	line-height: 1.4;
	padding: 6px 10px;
	-moz-tab-size: 4;
	     tab-size: 4;
}
pre code {
	background: none;
	padding: 0;
}
code,
kbd,
pre,
samp,
.terminal,
#splash .card strong {
	font-family: Consolas, Menlo, Monaco, "Lucida Console", "DejaVu Sans Mono", "Courier New", monospace;
}

img {
	max-width: 100%; /* Make sure images never go outside of their container */
}

:target::before {
	content: "";
	display: block;
	height: 60px;
	margin-top: -60px;
	visibility: hidden;
}

:target {
	text-decoration: underline;
}

.container {
	max-width: 750px;
}
#nav {
	background: #415364;
	color: #b7c5d1;
	position: sticky;
	top: 0;
	z-index: 1337;
}
#nav ul.nav-links {
	float: right;
	margin: 0;
	padding: 0;
}
#nav ul.nav-links li {
	float: left;
	list-style: none;
	margin: 0;
}
#nav input,
#nav button {
	background: transparent;
	border-radius: 0;
	-webkit-appearance: none;
	outline: none;
	border: 0;
}
#nav a,
#nav li button {
	display: inline-block;
	height: 50px;
	line-height: 50px;
	padding: 0 10px;
	font-weight: bold;
	color: inherit;
}
#nav a:hover,
#nav a:focus,
#nav a.active,
#nav button:hover,
#nav button:focus {
	color: #fff;
}
#nav .logo {
	line-height: 1;
	margin-left: -10px;
	padding: 5px 0;
}
#nav .logo svg {
	height: 40px;
	width: 122px;
}
.logo-st0 {
	fill: #FF9E18;
}
.logo-st1 {
	fill: #FFFFFF;
}
#nav .container {
	position: relative;
	padding-left: 5px;
	padding-right: 5px;
}
#nav .nav-search-overlay {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	padding: 0 10px;
	background: #415364;
	opacity: 0;
	visibility: hidden;
	transition: opacity .2s, visibility .2s;
}
#nav .nav-search-overlay.opened {
	opacity: 1;
	visibility: visible;
}
#nav .search-input-group {
	position: relative;
	margin-top: 10px;
	height: 30px;
	width: 100%;
}
#nav .search-input-group button {
	position: absolute;
	right: 0;
	top: 0;
	bottom: 0;
	height: 30px;
	text-align: center;
}
#nav .search-input-group input {
	border-bottom: 1px solid white;
	padding: 0;
	padding-right: 20px;
	width: calc(100% - 20px);
	height: 100%;
}

#nav .search-input-group input::-moz-placeholder {
	color: #b7c5d1;
	opacity: .5;
}

#nav .search-input-group input::-webkit-input-placeholder {
	color: #b7c5d1;
	opacity: .5;
}

#nav .search-input-group input:-ms-input-placeholder {
	color: #b7c5d1;
	opacity: .5;
}

#search-results {
	display: none;
}
#search-results ul {
	list-style: none;
	margin-left: 0;
	padding-left: 0;
}

#splash {
	background: #415364;
	color: #fff;
	text-align: center;
	padding-bottom: 50px;
}
#splash h1 {
	font-size: 40px;
	font-weight: bold;
	margin: 0;
}
#splash h2 {
	color: #b7c5d1;
	font-size: 18px;
	margin: 0;
}
#splash p {
	margin-top: 18px;
	color: #b7c5d1;
}
#splash .row {
	padding: 20px 0;
}
#splash .hgroup {
	margin: 60px 0;
}
#splash a:not(.btn) {
	color: #84ce88;
}
.btn {
	border: 2px solid #84ce88;
	border-radius: 3px;
	color: #84ce88;
	display: inline-block;
	font-size: 12px;
	font-weight: bold;
	letter-spacing: 1px;
	margin-bottom: 10px;
	padding: 9px 17px;
	text-transform: uppercase;
	transition: background 0.2s, border-color 0.2s, color 0.2s;
	word-spacing: 3px;
	cursor: pointer; /* This is useful for `<button>` elements */
}

.btn:disabled,
.btn:hover,
.btn:focus {
	background: #84ce88;
	color: #fff;
	opacity: 1;
	text-decoration: none;
}

.btn:active {
	box-shadow: none;
	opacity: 0.8;
}

#features {
	padding: 50px 0 80px;
}
#features h2 {
	margin-bottom: 50px;
	text-align: center;
}
#features h3 {
	font-weight: bold;
}
#features .feature {
	text-align: center;
	padding-bottom: 20px;
}
#features .screenshot {
	box-shadow: 0 0 25px rgba(65, 83, 100, 0.5);
	border-radius: 5px;
	aspect-ratio: 720 / 309;
}
#main h1,
#main h2,
#main h3 {
	margin: 1.3em 0 .5em;
}
#main h1 {
	margin-top: 0;
	font-size: 2.5em;
}
#main h2 {
	font-size: 24px;
	font-weight: bold;
}
#main h3 {
	margin-bottom: 13px;
}
#main {
	margin-bottom: 60px;
}
#desktop-menu {
	margin-top: 20px;
}
.menu {
	padding-left: 0;
	list-style: none;
}
.menu li {
	margin: 0;
}
.menu a {
	color: inherit;
	font-weight: normal;
	display: block;
	padding: 5px 0;
}
.menu a:hover,
.menu a.active {
	color: #50a656;
}
.menu a.active {
	font-weight: bold;
}
#footer {
	color: #5f7991;
	font-size: 13px;
}
#footer a {
	color: inherit;
}
#footer p {
	margin: 0;
	line-height: 20px;
}
#footer hr {
	margin: 0 15px 10px;
}

#mobile-menu {
	display: block;
	overflow: hidden;
	max-height: 0;
	transition: max-height 0.35s ease;
}

.alert {
	padding: 15px;
	margin-bottom: 20px;
	border: 1px solid transparent;
	border-radius: 4px;
}
.alert-info {
	color: #31708f;
	background-color: #d9edf7;
	border-color: #bce8f1;
}
.alert-info a {
	color: #245269;
}
.alert-warning {
	color: #8a6d3b;
	background-color: #fcf8e3;
	border-color: #faebcc;
}
.alert-warning a {
	color: #66512c;
}
.alert-danger {
	color: #a94442;
	background-color: #f2dede;
	border-color: #ebccd1;
}
.alert-danger a {
	color: #843534;
}
.alert p:last-child {
	margin-bottom: 0;
}

h2 a.link-anchor,
h3 a.link-anchor {
	color: inherit;
	opacity: 0;
	transition: opacity .2s;
}

h2:hover a.link-anchor,
h3:hover a.link-anchor {
	opacity: .7;
}

a.link-anchor {
	padding-right: 10px;
	position: absolute;
	margin-left: -30px;
}

/*
 * SVG icon styles
 */
.svg-inline {
	display: inline-block;
	font-size: inherit;
	height: 1em;
	width: 1em;
	vertical-align: -.125em;
}
.svg-inline-large {
	vertical-align: -.24em;
	font-size: 1.4em;
}

.center,
.app-stores,
.store-examples,
.stickers {
	text-align: center;
}
.app-stores a,
.store-examples a,
.stickers a {
	display: inline-block;
	padding-left: 10px;
	padding-right: 10px;
}
.app-stores a img {
	width: 50px;
	height: 50px;
}
.store-examples a img,
.stickers a img {
	max-height: 100%;
	max-width: 100%;
}
.app-stores a,
.stickers a {
	height: 50px;
}
.store-examples a {
	height: 100px;
}

/* Terminal windows-style, to present CLI outputs and such */

.terminal {
	background-color: black;
	border-radius: 5px;
	color: #c7c7c7;
	font-size: 0.9em;
	margin-bottom: 20px;
	margin-top: 20px;
	padding: 10px;
}

.terminal-log-info::before {
	color: #757575;
	content: "2017-12-08 12:34:56 ";
}

.terminal-log-info::after {
	color: #4565fd;
	content: "[INFO]";
}

.terminal-green {
	color: #05ba00;
}

.terminal-bold {
	color: white;
	font-weight: bold;
}

/* "Edit on GitHub" button */

.edit-page-btn {
	text-align: right;
	margin-top: 15px;
	font-size: .9em;
}

/* Rouge syntax highlighting - Igorpro theme */
.highlight table td { padding: 5px; }
.highlight table pre { margin: 0; }
.highlight, .highlight .w {
  color: #444444;
}
.highlight .cp {
  color: #CC00A3;
}
.highlight .cs {
  color: #CC00A3;
}
.highlight .c, .highlight .cd, .highlight .cm, .highlight .c1 {
  color: #FF0000;
}
.highlight .kc {
  color: #C34E00;
}
.highlight .kd {
  color: #0000FF;
}
.highlight .kr {
  color: #007575;
}
.highlight .k, .highlight .kn, .highlight .kp, .highlight .kt, .highlight .kv {
  color: #0000FF;
}
.highlight .s, .highlight .sb, .highlight .sc, .highlight .sd, .highlight .s2, .highlight .se, .highlight .sh, .highlight .si, .highlight .sx, .highlight .sr, .highlight .s1, .highlight .ss {
  color: #009C00;
}
.highlight .nb, .highlight .bp {
  color: #C34E00;
}

/* Video embeds */
.video-preview {
	max-width: 480px;
	margin-left: auto;
	margin-right: auto;
}

@media (max-width: 768px) {
	body {
		margin-bottom: 60px;
	}
	#splash h1 {
		font-size: 22px;
	}
	#splash h2 {
		font-size: 16px;
	}
	#features .feature {
		text-align: center;
		margin: 0 auto;
		max-width: 320px;
	}
	code {
		word-break: break-all;
	}
	a.link-anchor {
		position: relative;
		margin: 0;
		padding: 0;
		float: right;
	}
}

@media (max-width: 480px) {
	#splash .row {
		padding-top: 0;
	}
}

